tests/snapshots/corpus__高知大学アドバイザー教員に関する規則@高知大学アドバイザー教員に関する規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学アドバイザー教員に関する規則.pdf
---
{
  "title": "高知大学アドバイザー教員に関する規則",
  "enacted": "平成16年４月１日 規則第143号",
  "last_amended": "最終改正  令和７年３月25日規則第93号",
  "body": [
    {
      "type": "article",
      "number": {
        "article": 1,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "高知大学に、アドバイザー教員の制度を置く。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 2,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "アドバイザー教員は、高知大学における基幹教員等に関する規則第３条第１号アに該当する基幹教員があたるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 3,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "アドバイザー教員は、学生の履修計画及び進学・就職等について助言を与えるとともに、学生生活全般について相談を受けるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 4,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "アドバイザー教員は、学生の便宜を図るためにオフィス・アワーを設けるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 5,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "アドバイザー教員は、学部教授会の求めがある場合には、学生に関する資料を作成し、報告しなければならない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "article": 6,
        "branch": null
      },
      "title": null,
      "paragraphs": [
        {
          "number": 1,
          "text": "その他アドバイザー教員の運用については、別に定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "raw_text": "この規則は、平成16年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（平成20年３月26日規則第127号）",
      "raw_text": "この規則は、平成20年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（令和７年３月25日規則第93号）",
      "raw_text": "この規則は、令和７年４月１日から施行する。",
      "references_tables": []
    }
  ],
  "appended_tables": []
}
